2001-05-30  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Implement "bug" #3969. Code mostly stolen from libzvt.

	* main.c (hide_cursor), (show_cursor), (show_cursor_cb): New
	  functions.
	  (setup_window): Create the "invisible GdkCursor" and connect to
	  motion_notify_event signal.
	  (key_press_cb): Hide the cursor here.

2001-05-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* worm.c (gnibbles_worm_undraw_nth) : Chaged if (i == 0) to 
	  if (i <= 0) to fix buf #51309.

2000-11-08  Kevin Breit <battery841@mypad.com>

	* help/C/gnibbles.sgml: Started conversion from <itemizedlist> to
          <variablelist> and a few clarity changes.

2000-11-08  Kevin Breit <battery841@mypad.com>

	* help/C/gnibbles.sgml: Made the manual Gnome 1.4/db2html2 ready.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/topic.dat: Fixed

2000-08-12  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/Makefile.am: Fixed stylesheet-images/ stuff

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* Makefile.am: Added the "help" SUBDIR
	* help/Makefile.am: Added
	* help/C/Makefile.am: Added
	* help/C/topic.dat: Added
	* help/C/images/*.png: Moved into help/C/
          - geez, we really need to standardize where these 
            things belong - every package does it differently :(

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* help/: Created 
	* help/C/: Created
	* help/C/gnibbles-manual.sgml: Added Kevin Breit's doc
	* help/C/images/: Created
	* help/C/images/*.png: Added Kevin's screenshots

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* docs/: removed - I should have put all this in help/

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* docs/: Created 
	* docs/C/: Created
	* docs/C/gnibbles-manual.sgml: Added Kevin Breit's doc
	* docs/C/images/: Created
	* docs/C/images/*.png: Added Kevin's screenshots

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnibbles.desktop: Added Swedish translation.

2000-05-06  Karl Eichwalder  <ke@suse.de>

	* gnibbles.soundlist: Add de.
